apps/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
  selector:
    app: jellyseerr
